[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Map/CloseButton.png" type="Texture" id=1]
[ext_resource path="res://Assets/Map/Map.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/Map/MapButton.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Map/map.gd" type="Script" id=4]

[node name="MapLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 4 )

[node name="MapContainer" type="Node2D" parent="."]
visible = false

[node name="MapButton" type="Button" parent="MapContainer"]
margin_right = 231.0
margin_bottom = 120.0
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="MapContainer"]
visible = false
position = Vector2( 131.627, 92 )
scale = Vector2( 0.523957, 1.70175 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Map" type="Sprite" parent="MapContainer/Background"]
position = Vector2( -0.241882, -5.96046e-06 )
scale = Vector2( 0.0857676, 0.024596 )
texture = ExtResource( 2 )

[node name="CloseButton" type="Button" parent="MapContainer/Background"]
margin_left = 70.4274
margin_top = -46.4227
margin_right = 192.427
margin_bottom = 73.5773
rect_scale = Vector2( 0.3, 0.1 )
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MapContainer/MapButton" to="." method="_on_MapButton_pressed"]
[connection signal="pressed" from="MapContainer/Background/CloseButton" to="." method="_on_CloseButton_pressed"]
